--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
-    "mongoose": "^6.6.5",
+    "mongoose": "^6.6.5"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
